kubernetes/deploy/proxies/internal/nodes/tegridy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tegridy
spec:
  ports:
  - protocol: TCP
    port: 8006
    name: http
    targetPort: 8006
