kubernetes/deploy/proxies/internal/nodes/tegridy/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: tegridy
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`tegridy.vandeneede.org`)
    services:
    - name: tegridy
      port: 8006
      scheme: https
